Updating PostCSS preferences

--- a/style.css
+++ b/style.css
@@ -11,3 +11,4 @@ License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: granulosa
 Tags: two-column, flexible-header, accessibility-ready, custom-colors, custom-menu, custom-logo, editor-style, featured-images
+*/
