--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-// SASS IMPORT
+/* SASS IMPORTS */
 @import 'variables';
 @import 'mixins';
 @import 'base';
@@ -6,3 +6,4 @@
 @import 'primary';
 @import 'secondary';
 @import 'footer';
+
