--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,4 +1,4 @@
-//COLOURS
+/* SASS IMPORTS */
 $wht: #fff;
 $blk: #0d0d0f;
 $red: #e51d13;
@@ -12,8 +12,9 @@ $d-gry: #727272;
 
 $blk-t: rgba(0, 0, 0, 0.5);
 
-//TEXT
-// $font-lgt: Kelson-Light;
-// $font-reg: Kelson;
-// $font-med: Kelson-Medium;
-// $font-bld: Kelson-Bold;
+/* FONTS
+/* $font-lgt: Kelson-Light;
+/* $font-reg: Kelson;
+/* $font-med: Kelson-Medium;
+/* $font-bld: Kelson-Bold;
+*/
