added pages, theme support, custom scripts and bootstrap nav

--- a/assets/prefix/header.scss
+++ b/assets/prefix/header.scss
@@ -1,3 +1,9 @@
 /* SASS IMPORTS */
 @import 'variables';
 @import 'mixins';
+
+.navWrap {
+  margin-left: 15px;
+  margin-right: 15px;
+  display: flex;
+}
