--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,1 @@
-body{background:#2b2b2b}*{padding:0;margin:0;box-sizing:border-box;-webkit-text-decoration:none;text-decoration:none;list-style:none}
+body{background:#fff}*{padding:0;margin:0;box-sizing:border-box;-webkit-text-decoration:none;text-decoration:none;list-style:none}.navWrap{margin-left:15px;margin-right:15px;display:flex}
