--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,1 @@
-body{background:#fff}*{padding:0;margin:0;box-sizing:border-box;-webkit-text-decoration:none;text-decoration:none;list-style:none}.navWrap{margin-left:15px;margin-right:15px;display:flex}
+body{background:#fff}*{padding:0;margin:0;box-sizing:border-box;-webkit-text-decoration:none;text-decoration:none;list-style:none}.navWrap{display:flex}.navbar img{max-height:50px;max-width:300px}.navbar-dark{background:#fff;border-bottom:2px solid #555}
