--- a/assets/prefix/header.scss
+++ b/assets/prefix/header.scss
@@ -2,8 +2,19 @@
 @import 'variables';
 @import 'mixins';
 
+/* nav */
 .navWrap {
-  margin-left: 15px;
-  margin-right: 15px;
+  /* margin-left: 15px;
+  margin-right: 15px; */
   display: flex;
+}
+
+.navbar img {
+  max-height: 50px;
+  max-width: 300px;
+}
+
+.navbar-dark {
+  background: #ffffff;
+  border-bottom: 2px solid #555555;
 }
