--- a/assets/prefix/header.scss
+++ b/assets/prefix/header.scss
@@ -4,8 +4,6 @@
 
 /* nav */
 .navWrap {
-  /* margin-left: 15px;
-  margin-right: 15px; */
   display: flex;
 }
 
@@ -16,5 +14,12 @@
 
 .navbar-dark {
   background: #ffffff;
-  border-bottom: 2px solid #555555;
+  border-bottom: 3px solid #b3b3b3;
+}
+
+.navbar a {
+  color: $grey !important;
+  &:hover{
+    color: $red !important;
+  }
 }
