--- a/assets/prefix/variables.scss
+++ b/assets/prefix/variables.scss
@@ -1,16 +1,12 @@
 /* SASS IMPORTS */
-$wht: #fff;
-$blk: #0d0d0f;
-$red: #e51d13;
-$pch: #f28f87;
-$grn: #2db976;
-$l-grn: #bbfaab;
-$d-grn: #38704c;
-$gry: #e9e9e9;
-$l-gry: #f4f4f4;
-$d-gry: #727272;
+$white: #fff;
+$black: #0d0d0f;
+$red: rgb(237, 28, 36);
+$peach: #f28f87;
+$grey: #2b2b2b;
+$light-grey: #e9e9e9;
 
-$blk-t: rgba(0, 0, 0, 0.5);
+$black-t: rgba(0, 0, 0, 0.5);
 
 /* FONTS
 /* $font-lgt: Kelson-Light;
