--- a/assets/prefix/footer.scss
+++ b/assets/prefix/footer.scss
@@ -1,3 +1,9 @@
 /* SASS IMPORTS */
 @import 'variables';
 @import 'mixins';
+
+/* footer */
+/* .footer {
+  max-width: 1200px;
+  margin: 0 auto;
+} */
