--- a/assets/prefix/main.scss
+++ b/assets/prefix/main.scss
@@ -3,7 +3,5 @@
 @import 'mixins';
 @import 'base';
 @import 'header';
-@import 'primary';
-@import 'secondary';
+@import 'content';
 @import 'footer';
-
