--- a/assets/sass/variables.scss
+++ b/assets/sass/variables.scss
@@ -2,9 +2,9 @@
 $white: #fff;
 $black: #0d0d0f;
 $red: rgb(237, 28, 36);
-$peach: #f28f87;
+$peach: rgb(255, 116, 106);
 $grey: #2b2b2b;
-$light-grey: #e9e9e9;
+$light-grey: #e7e7e7;
 
 $black-t: rgba(0, 0, 0, 0.5);
 
