Added headings and dynamic page functions

--- a/assets/prefix/content.scss
+++ b/assets/prefix/content.scss
@@ -2,6 +2,12 @@
 @import 'variables';
 @import 'mixins';
 
+/* container –––––––––––––––––––––––––– */
+.container-fluid {
+  max-width: 1200px;
+	flex: 1 0 auto;
+}
+
 /* content –––––––––––––––––––––––––––– */
 .content-area {
 	margin: 2em 0;
