--- a/assets/sass/base.scss
+++ b/assets/sass/base.scss
@@ -25,7 +25,11 @@ a {
 	}
 }
 
-.container-fluid {
-  max-width: 1200px;
-	flex: 1 0 auto;
+h1 {
+	text-transform: uppercase;
+	color: $red;
+	font-size: 3em;
+	font-weight: 500;
+	text-align: center;
+	margin-top: 30px;
 }
