--- a/assets/prefix/variables.scss
+++ b/assets/prefix/variables.scss
@@ -5,7 +5,7 @@ $red: rgb(237, 28, 36);
 $peach: rgb(255, 116, 106);
 $grey: #2b2b2b;
 $light-grey: #e7e7e7;
-
+$grey-t: rgba(0, 0, 0, 0.03);
 $black-t: rgba(0, 0, 0, 0.5);
 
 /* FONTS
