--- a/assets/prefix/footer.scss
+++ b/assets/prefix/footer.scss
@@ -4,21 +4,19 @@
 
 /* footer */
 footer {
-  display: flex;
   align-items: center;
+  border-top: 1px solid $light-grey;
+  display: flex;
   flex-shrink: 0;
+  height: 60px;
   margin: 0 auto;
-  height: 80px;
-/*   padding-left: 15px;
-  padding-right: 15px; */
   width: 100%;
+  background: $grey-t;
 }
 
 .footerWrap {
-/*   margin-left: 15px;
-  margin-right: 15px; */
+  align-items: center;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
 }
