--- a/assets/sass/content.scss
+++ b/assets/sass/content.scss
@@ -16,6 +16,12 @@
 /* single content */
 .content-area-single {
 	margin: 20px auto;
+	display: flex;
+	justify-content: center;
+}
+
+.single-row {
+	max-width: 600px;
 }
 
 /* img –––––––––––––––––––––––––––––––– */
