--- a/assets/prefix/content.scss
+++ b/assets/prefix/content.scss
@@ -24,6 +24,28 @@
 	max-width: 600px;
 }
 
+.single-row a {
+	color: $red;
+}
+.single-row article {
+	-webkit-column-count: 1;
+	   -moz-column-count: 1;
+	        column-count: 1;
+}
+
+/* article –––––––––––––––––––––––––––– */
+article{
+	-webkit-column-count: 2;
+	   -moz-column-count: 2;
+	        column-count: 2;
+	-webkit-column-gap: 3em;
+	   -moz-column-gap: 3em;
+	        column-gap: 3em;
+	-webkit-column-rule: 1px solid $light-grey;
+	   -moz-column-rule: 1px solid $light-grey;
+	        column-rule: 1px solid $light-grey;
+}
+
 /* img –––––––––––––––––––––––––––––––– */
 /*  featured img */
 .featuredImgWrap {
@@ -54,4 +76,13 @@
 /* cards –––––––––––––––––––––––––––––– */
 .card {
 	margin-bottom: 20px;
+}
+
+/* media –––––––––––––––––––––––––––––– */
+@media (max-width: 576px) {
+	article{
+		-webkit-column-count: 1;
+		   -moz-column-count: 1;
+		        column-count: 1;
+	}
 }
